--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 
     <title>Coming Soon.</title>
   </head>
-  <body>
-
-    <div class="container pt-5">
+  <body class="bg-light">
+    <div class="container bg-white mt-5 mb-5 pt-2 pb-2 min-vh-100 border rounded-3">
       <h1 style="text-align: center">Coming Soon.</h1>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
