lowered min height to 85% of viewport

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Coming Soon.</title>
   </head>
   <body class="bg-light">
-    <div class="container bg-white mt-5 mb-5 pt-2 pb-2 min-vh-100 border rounded-3">
+    <div class="container bg-white mt-5 mb-5 pt-2 pb-2 border rounded-3" style="min-height: 85vh">
       <h1 style="text-align: center">Coming Soon.</h1>
     </div>
 
