--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Coming Soon.</title>
+    <title>HDZcoin.io</title>
   </head>
   <body class="bg-light">
     <div class="container bg-white mt-5 mb-5 pt-2 pb-2 border rounded-3" style="min-height: 85vh">
-      <h1 style="text-align: center">Coming Soon.</h1>
+      <h1 class="display-1">HDZcoin.io</h1>
+
+      <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="https://hdzcoin.io">&nbsp;HDZcoin.io</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Under Construction</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <h2 class="text-center mt-5">Coming Soon.</h2>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
