--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
       <h1 class="display-1"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
 
       <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="https://hdzcoin.io">&nbsp;HDZcoin.io</a>
+        <a class="navbar-brand" href="https://hdzcoin.io">&nbsp;<span style="color: lightgreen">HDZ</span><span style="color: yellow">coin</span>.io</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
