--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container bg-white mt-5 mb-5 pt-2 pb-2 border rounded-3" style="min-height: 85vh">
       <h1 class="display-1"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
 
-      <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark rounded-3">
         <div class="container-fluid">
           <a class="navbar-brand" href="https://hdzcoin.io"><span style="color: lightgreen">HDZ</span><span style="color: yellow">coin</span>.io</a>
 
