--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body class="bg-light">
-    <div class="container bg-white mt-5 mb-5 pt-2 pb-2 border rounded-3" style="min-height: 85vh">
+    <div class="container bg-white my-5 py-2 border rounded-3" style="min-height: 70vh">
       <h1 class="display-1"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
 
       <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark rounded-3">
