--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
 
   <body class="bg-light">
     <div class="container bg-white my-5 py-2 border rounded-3" style="min-height: 70vh">
-      <h1 class="display-1"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
+      <header>
+        <h1 class="display-1"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
 
-      <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark rounded-3">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="https://hdzcoin.io"><span style="color: lightgreen">HDZ</span><span style="color: yellow">coin</span>.io</a>
+        <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark rounded-3">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="https://hdzcoin.io"><span style="color: lightgreen">HDZ</span><span style="color: yellow">coin</span>.io</a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Under Construction</a>
-              </li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Under Construction</a>
+                </li>
+              </ul>
+            </div>
+
           </div>
-
-        </div>
-      </nav>
-
+        </nav>
+      </header>
+      
       <h2 class="text-center mt-5">Coming Soon.</h2>
 
     </div>
