--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
   <body class="bg-light">
     <div class="container bg-white my-5 py-2 border rounded-3" style="min-height: 70vh">
       <header>
-        <h1 class="display-1"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
-
-        <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark rounded-3">
+        <div class="row">
+          <div class="col-8">
+            <h1 class="display-1"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
+          </div>
+          <div class="col-4">
+            <img class="float-end" height=100 width=100 src="logo.png">
+          </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg sticky-top rounded-3">
           <div class="container-fluid">
             <a class="navbar-brand" href="https://hdzcoin.io"><span style="color: lightgreen">HDZ</span><span style="color: yellow">coin</span>.io</a>
 
@@ -33,7 +39,7 @@
           </div>
         </nav>
       </header>
-      
+
       <h2 class="text-center mt-5">Coming Soon.</h2>
 
     </div>
