--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <div class="row">
           <div class="col-9">
-            <h1 class="display-1 align-middle"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
+            <h1 class="display-1 align-middle" style="line-height: 90px"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
           </div>
           <div class="col-3">
             <img class="float-end" height=90 width=90 src="logo.png">
