--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="bg-light">
     <div class="container bg-white my-5 py-2 border rounded-3" style="min-height: 70vh">
       <header>
-        <div class="row">
+        <div class="row" height=90>
           <div class="col-9">
             <h1 class="display-1 align-middle" style="line-height: 90px"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
           </div>
