Changed black to purple to match logo

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <header>
         <div class="row" height=90>
           <div class="col-9">
-            <h1 class="display-1 align-middle" style="line-height: 90px"><span style="color: green">HDZ</span><span style="color: gold">coin</span>.io</h1>
+            <h1 class="display-1 align-middle" style="line-height: 90px"><span style="color: green">HDZ</span><span style="color: gold">coin</span><span style="color: #262262">.io</span></h1>
           </div>
           <div class="col-3">
             <img class="float-end" height=90 width=90 src="logo.png">
           </div>
         </div>
-        <nav class="navbar navbar-dark bg-dark navbar-expand-lg sticky-top rounded-3">
+        <nav class="navbar navbar-dark navbar-expand-lg sticky-top rounded-3" style="background-color: #262262">
           <div class="container-fluid">
             <a class="navbar-brand" href="https://hdzcoin.io"><span style="color: lightgreen">HDZ</span><span style="color: yellow">coin</span>.io</a>
 
@@ -35,7 +35,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Under Construction</a>
+                  <a class="nav-link" href="#">About HDZcoin</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Whitepaper</a>
                 </li>
               </ul>
             </div>
@@ -44,7 +47,7 @@
         </nav>
       </header>
 
-      <h2 class="text-center mt-5">Coming Soon.</h2>
+      <h2 class="text-center mt-5" style="color: #262262">Coming Soon.</h2>
 
     </div>
 
